refactor: Improve UI responsiveness and theme styling
Enhance the user interface by refining the sidebar's responsiveness and introducing new color variables for improved theme consistency. Adjustments are made to modal and trade log components to better adapt to various screen sizes, ensuring a more robust and visually appealing user experience across different devices.

The main layout now properly supports larger screens with a persistent sidebar, and the main content area handles scrolling gracefully. New theme variables offer more control and flexibility for future design iterations.

Additionally, the theme transition effect has been removed for a smoother initial load.

--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;900&display=swap" rel="stylesheet">
     <style>
         :root {
-            /* Sophisticated Neutral Gray Theme */
+            /* Sophisticated Neutral Gray Theme - DARK */
             --bg-color: #0a0a0b;
             --text-main: #f8fafc;
             --text-sub: #64748b;
             --panel-bg: rgba(18, 18, 20, 0.7);
             --panel-border: rgba(255, 255, 255, 0.04);
+            --panel-bg-hover: rgba(24, 24, 27, 0.8);
+            --panel-border-hover: rgba(255, 255, 255, 0.1);
             --mesh-opacity: 0.2;
             --chart-bg: #0d0d0d;
             --chart-grid: rgba(255, 255, 255, 0.02);
@@ -26,18 +28,22 @@
         }
 
         [data-theme="light"] {
-            --bg-color: #f1f5f9;
-            --text-main: #0f172a;
-            --text-sub: #334155;
-            --panel-bg: rgba(255, 255, 255, 0.4);
-            --panel-border: rgba(15, 23, 42, 0.08);
-            --mesh-opacity: 0.25;
-            --chart-bg: #e2e8f0;
-            --chart-grid: rgba(15, 23, 42, 0.08);
-            --chart-text: #64748b;
-            --tooltip-bg: #ffffff;
-            --tooltip-text: #0f172a;
-            --border-subtle: rgba(15, 23, 42, 0.06);
+            /* High-Contrast Black and White Theme - LIGHT */
+            --bg-color: #ffffff;
+            --text-main: #000000;
+            --text-sub: #333333;
+            --panel-bg: #ffffff;
+            --panel-border: #000000;
+            --panel-bg-hover: #f5f5f5;
+            --panel-border-hover: #000000;
+            --mesh-opacity: 0.05;
+            --chart-bg: #ffffff;
+            --chart-grid: rgba(0, 0, 0, 0.1);
+            --chart-text: #000000;
+            --tooltip-bg: #000000;
+            --tooltip-text: #ffffff;
+            --border-subtle: #000000;
+            --accent-glow: rgba(0, 0, 0, 0.1);
         }
 
         body {
@@ -54,14 +60,14 @@
             backdrop-filter: blur(24px);
             -webkit-backdrop-filter: blur(24px);
             border: 1px solid var(--panel-border);
-            box-shadow: 0 4px 24px -1px rgba(0, 0, 0, 0.3);
+            box-shadow: 0 4px 24px -1px rgba(0, 0, 0, 0.05);
             transition: all 0.4s cubic-bezier(0.16, 1, 0.3, 1);
         }
 
         .glass-panel:hover {
-            border-color: rgba(255, 255, 255, 0.1);
-            background: rgba(24, 24, 27, 0.8);
-            box-shadow: 0 12px 48px -12px rgba(0, 0, 0, 0.5);
+            border-color: var(--panel-border-hover);
+            background: var(--panel-bg-hover);
+            box-shadow: 0 12px 48px -12px rgba(0, 0, 0, 0.1);
         }
 
         /* Core Transition Animations */
@@ -100,9 +106,9 @@
             width: 100%;
             height: 100%;
             z-index: -1;
-            background: radial-gradient(circle at 5% 5%, rgba(45, 212, 191, var(--mesh-opacity)) 0%, transparent 50%),
-                        radial-gradient(circle at 95% 95%, rgba(99, 102, 241, var(--mesh-opacity)) 0%, transparent 50%),
-                        radial-gradient(circle at 50% 50%, rgba(34, 211, 238, 0.05) 0%, transparent 80%);
+            background: radial-gradient(circle at 5% 5%, rgba(0, 0, 0, var(--mesh-opacity)) 0%, transparent 50%),
+                        radial-gradient(circle at 95% 95%, rgba(0, 0, 0, var(--mesh-opacity)) 0%, transparent 50%),
+                        radial-gradient(circle at 50% 50%, rgba(0, 0, 0, 0.02) 0%, transparent 80%);
             transition: background 1s ease;
         }
         
@@ -114,15 +120,17 @@
         /* Hover Enhancements */
         tr.animate-fade-in-up:hover {
             transform: scale(1.005) translateX(4px);
-            background: rgba(255, 255, 255, 0.04) !important;
-            box-shadow: 0 4px 20px -8px rgba(0, 0, 0, 1);
+            background: var(--panel-bg-hover) !important;
+            box-shadow: 0 4px 20px -8px rgba(0, 0, 0, 0.1);
             z-index: 10;
         }
 
         ::-webkit-scrollbar { width: 4px; height: 4px; }
         ::-webkit-scrollbar-track { background: transparent; }
-        ::-webkit-scrollbar-thumb { background: rgba(255,255,255,0.03); border-radius: 10px; }
-        ::-webkit-scrollbar-thumb:hover { background: rgba(255,255,255,0.1); }
+        ::-webkit-scrollbar-thumb { background: rgba(0,0,0,0.1); border-radius: 10px; }
+        ::-webkit-scrollbar-thumb:hover { background: rgba(0,0,0,0.2); }
+        [data-theme="dark"] ::-webkit-scrollbar-thumb { background: rgba(255,255,255,0.03); }
+        [data-theme="dark"] ::-webkit-scrollbar-thumb:hover { background: rgba(255,255,255,0.1); }
     </style>
     <script type="importmap">
     {
