--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;900&display=swap" rel="stylesheet">
     <style>
         :root {
-            /* Sophisticated Neutral Gray Theme - DARK */
+            /* Sophisticated Neutral Gray Theme - DARK ONLY */
             --bg-color: #0a0a0b;
             --text-main: #f8fafc;
             --text-sub: #64748b;
@@ -25,25 +25,6 @@
             --tooltip-text: #f1f5f9;
             --border-subtle: rgba(255, 255, 255, 0.04);
             --accent-glow: rgba(34, 211, 238, 0.15);
-        }
-
-        [data-theme="light"] {
-            /* High-Contrast Black and White Theme - LIGHT */
-            --bg-color: #ffffff;
-            --text-main: #000000;
-            --text-sub: #333333;
-            --panel-bg: #ffffff;
-            --panel-border: #000000;
-            --panel-bg-hover: #f5f5f5;
-            --panel-border-hover: #000000;
-            --mesh-opacity: 0.05;
-            --chart-bg: #ffffff;
-            --chart-grid: rgba(0, 0, 0, 0.1);
-            --chart-text: #000000;
-            --tooltip-bg: #000000;
-            --tooltip-text: #ffffff;
-            --border-subtle: #000000;
-            --accent-glow: rgba(0, 0, 0, 0.1);
         }
 
         body {
